--- a/pkibox/src/PKIBox/CMakeLists.txt
+++ b/pkibox/src/PKIBox/CMakeLists.txt
@@ -2,6 +2,7 @@
 SET(PKIBOX_SOURCES
     Exception.cpp
     InvalidArgumentException.cpp
+    NullPointerException.cpp
     PKIBox.cpp
     asn1/AlgorithmID.cpp
     asn1/Attribute.cpp
@@ -13,12 +14,47 @@ SET(PKIBOX_SOURCES
     asn1/OIDs.cpp
     asn1/RelativeDistinguishedName.cpp
     openssl/Globals.cpp
+    security/Key.cpp
+    security/cert/Certificate.cpp
+    utils/ArithmeticException.cpp
+    utils/BigInteger.cpp
     utils/ByteArray.cpp
+    utils/DateTime.cpp
+    utils/File.cpp
+    utils/TimeSpan.cpp
+    x509/PrivateKey.cpp
+    x509/PublicKey.cpp
+    x509/PublicKeyInfo.cpp
+    x509/X509Certificate.cpp
+    x509/X509CRL.cpp
+    x509/X509CRLEntry.cpp
+    x509/X509Extension.cpp
+    x509/extensions/AccessDescription.cpp
+    x509/extensions/AuthorityInformationAccess.cpp
+    x509/extensions/BasicConstraints.cpp
+    x509/extensions/CertificatePolicies.cpp
+    x509/extensions/CRLDistributionPoint.cpp
+    x509/extensions/CRLDistributionPoints.cpp
+    x509/extensions/CRLNumber.cpp
+    x509/extensions/DeltaCRLIndicator.cpp
+    x509/extensions/ExtendedKeyUsage.cpp
+    x509/extensions/HoldInstructionCode.cpp
+    x509/extensions/InvalidityDate.cpp
+    x509/extensions/IssuerAltName.cpp
+    x509/extensions/KeyUsage.cpp
+    x509/extensions/NoticeReference.cpp
+    x509/extensions/PolicyInformation.cpp
+    x509/extensions/PolicyQualifierInfo.cpp
+    x509/extensions/ReasonCode.cpp
+    x509/extensions/SubjectAltName.cpp
+    x509/extensions/SubjectKeyIdentifier.cpp
+    x509/extensions/UserNotice.cpp    
 )
 
 SET(PKIBOX_HEADERS
     Exception.h
     InvalidArgumentException.h
+    NullPointerException.h
     PKIBox.h
     asn1/AlgorithmID.h
     asn1/Attribute.h
@@ -30,7 +66,43 @@ SET(PKIBOX_HEADERS
     asn1/OIDs.h
     asn1/RelativeDistinguishedName.h
     openssl/Globals.h
+    security/Key.h
+    security/cert/Certificate.h
+    utils/ArithmeticException.h
+    utils/BigInteger.h
     utils/ByteArray.h
+    utils/clone_ptr.h
+    utils/DateTime.h
+    utils/File.h
+    utils/TimeSpan.h
+    x509/PrivateKey.h
+    x509/PublicKey.h
+    x509/PublicKeyInfo.h
+    x509/X509CertChain.h
+    x509/X509Certificate.h
+    x509/X509CRL.h
+    x509/X509CRLEntry.h
+    x509/X509Extension.h
+    x509/extensions/AccessDescription.h
+    x509/extensions/AuthorityInformationAccess.h
+    x509/extensions/BasicConstraints.h
+    x509/extensions/CertificatePolicies.h
+    x509/extensions/CRLDistributionPoint.h
+    x509/extensions/CRLDistributionPoints.h
+    x509/extensions/CRLNumber.h
+    x509/extensions/DeltaCRLIndicator.h
+    x509/extensions/ExtendedKeyUsage.h
+    x509/extensions/HoldInstructionCode.h
+    x509/extensions/InvalidityDate.h
+    x509/extensions/IssuerAltName.h
+    x509/extensions/KeyUsage.h
+    x509/extensions/NoticeReference.h
+    x509/extensions/PolicyInformation.h
+    x509/extensions/PolicyQualifierInfo.h
+    x509/extensions/ReasonCode.h
+    x509/extensions/SubjectAltName.h
+    x509/extensions/SubjectKeyIdentifier.h
+    x509/extensions/UserNotice.h
 )
 
 INSTALL(FILES ${PKIBOX_HEADERS}
