--- a/pkibox/CMakeLists.txt
+++ b/pkibox/CMakeLists.txt
@@ -198,8 +198,9 @@ ENDIF(CppUnit_FOUND)
 FIND_PACKAGE(OpenSSL)
 
 IF(OPENSSL_FOUND)
-  MESSAGE("Found openssl. Signature support will be build.")
+  MESSAGE("Found openssl. Signature support will be build. (${OPENSSL_LIBRARIES})")
   SET(HAVE_OPENSSL OPENSSL_FOUND)
+  INCLUDE_DIRECTORIES(${OPENSSL_INCLUDES})
 ELSE(OPENSSL_FOUND)
   MESSAGE("Openssl not found. Signature support will not be build.")
 ENDIF(OPENSSL_FOUND)
